--- a/configuration.properties
+++ b/configuration.properties
@@ -3,6 +3,8 @@ url=https://qa3.vytrack.com
 qa1_url=https://qa1.vytrack.com
 qa2_url=https://qa2.vytrack.com
 driver_username=user1
+driver_password=UserUser123
 storemanager_username=storemanager51
+storemanager_password=UserUser123
 salesmanager_username=salesmanager101
-password=UserUser123
+salesmanager_password=UserUser123
